force-app/main/default/objects/Space__c/fields/BaseDailyBookingRate__c.field-meta.xml
<CustomField>
    <fullName>BaseDailyBookingRate__c</fullName>
    <label>Base Daily Booking Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>