force-app/main/default/objects/Space__c/fields/MaximumCapacity__c.field-meta.xml
<CustomField>
    <fullName>MaximumCapacity__c</fullName>
    <label>Maximum Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>