force-app/main/default/objects/Space__c/fields/MinimumCapacity__c.field-meta.xml
<CustomField>
    <fullName>MinimumCapacity__c</fullName>
    <label>Minimum Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>