force-app/main/default/objects/Space__c/fields/PictureURL__c.field-meta.xml
<CustomField>
    <fullName>PictureURL__c</fullName>
    <label>Picture URL</label>
    <type>Url</type>
</CustomField>