force-app/main/default/objects/Space__c/fields/PredictedBookingRate__c.field-meta.xml
<CustomField>
    <fullName>PredictedBookingRate__c</fullName>
    <label>Predicted Booking Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>