force-app/main/default/objects/Space__c/fields/PredictedDemand__c.field-meta.xml
<CustomField>
    <fullName>PredictedDemand__c</fullName>
    <label>Predicted Demand</label>
    <length>80</length>
    <type>Text</type>
</CustomField>